setup basic slider logic using inline style and array index

--- a/src/index.css
+++ b/src/index.css
@@ -428,6 +428,9 @@ ul {
     font-size: 1.5rem;
   }
 }
+.next-slide {
+  transform: translateX(100%);
+}
 
 /* ============= Slick Carousel =============== */
 /* 
