--- a/src/index.css
+++ b/src/index.css
@@ -350,7 +350,7 @@ ul {
   max-width: 800px;
   position: relative;
   height: 450px;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 .slide {
   text-align: center;
